--- a/IISReports/packages.config
+++ b/IISReports/packages.config
@@ -22,5 +22,8 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="PlainElastic.Net" version="1.0.44" targetFramework="net45" />
+  <package id="UAParser" version="1.0.1.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
+  <package id="YamlDotNet.Core" version="1.1.17" targetFramework="net45" />
+  <package id="YamlDotNet.RepresentationModel" version="1.1.17" targetFramework="net45" />
 </packages>
